feat: add participant archive and unarchive
